test/libsolidity/syntaxTests/nameAndTypeResolution/constant_forward_reference_struct.sol
S constant x;
struct S { int y; }
// ----
// TypeError 9259: (0-12): Only constants of value type and byte arrays are implemented.
